--- a/popup.html
+++ b/popup.html
@@ -42,5 +42,14 @@
   <button id="reset" style="margin-top:6px">Reset to Defaults</button>
 
   <script src="popup.js"></script>
+
+
+  <body style="font-family:sans-serif;padding:10px;width:180px">
+    <button id="activate">Set Active Icon</button>
+    <button id="reset" style="margin-top:6px">Reset Icon</button>
+    <script src="popup.js"></script>
+  </body>
+
+
 </body>
 </html>
